--- a/SignUp.html
+++ b/SignUp.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Page Title</title>
+
 </head>
 <body>
 <form>
@@ -90,7 +91,7 @@
       <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
     </label>
     
-    <button type="submit" value="Submit" onclick="submit()">Submit</button>
+    <button type="submit" value="Submit" onclick="submit();">Submit</button>
    
 
 </div>
