--- a/Teacherside.html
+++ b/Teacherside.html
@@ -34,19 +34,19 @@ var loadFile = function(event) {
 </div>
 <div>
     <!--description-->
-    <textarea rows = "5" cols = "60" name = "description">
+    <textarea rows = "5" cols = "60" id="setText" name = "description">
         Enter description
      </textarea><br>
     
 </div>
 <div>
-    <!---Choose -->>
+    <!---Choose -->
 
 </div>
 <div>
     <!--Buttons-->
-    <input type = "submit" value = "submit" />
+    <button onclick="GetDescription()" type="button">Submit</button>
 </div>
 </body>
-<script src="USER.JS"></script>
+<script src="index.js"></script>
 </html>
